--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,9 @@ spring.datasource.username= root
 spring.datasource.password= tfg123
 
 # ===============================
-# = INFORMACION ADICIONAL
+# = CUENTA DE ADMINISTRADOR
 # ===============================
+
 
 #Permite conocer los endpoints
 logging.level.org.springframework.web.servlet.mvc.method.annotation=TRACE
